syntax = "proto3";
import "public/node.proto";
option go_package = "github.com/cwloo/uploader/proto/gate.http;pb_httpgate";
package httpgate;

service httpGate {
  rpc GetRouter(public.RouterReq) returns(public.RouterResp);
}

